# LearnOpengl

./: .gitignore  CMakeLists.txt  TODOS.md
include/: camera.hpp  gl_types.hpp  shader.hpp  vertex_buffers.hpp
include/glad/: glad.h
src/: camera.cpp  glad.c  main.cpp  shader.cpp  vertex_buffers.cpp
